
Denora v1.5.0-git
-------------

Additions
13/10/23 Adds m4 directory, the configure files are getting nasty, time to move macros where
         they belong.
13/10/21 Added regex.h to the build, core and modules can now use this to pattern 
         match with regular expressions. 
13/01/13 Added support for ircu's channel mode +R (was missing)


Changes
13/10/24 Removes some future features so 1.5 can roll
13/10/24 Removes Postgre from the code, was never used or really compiled for, maybe in the futre
13/10/22 Removed configure searches to embed perl in the code
13/10/17 Removed USE_RDB define from config, this was legacy Anope code for when rdb was an option.
13/05/31 Improved handling of KILL messages on InspIRCd
13/05/16 Do not free unallocated memory in InspIRCd protocol

Fixes
13/11/01 Cleaned up the "nefarious" hack in do_umode(), no longer leaks memory and ANSI standard
         coding.
13/10/31 change_user_realname() escaped the user->realname field then called on rdb_escape() again
         in the query, thus leaking memory.
13/10/31 sql_do_server_version() escaped the version reply but never used that when setting updating.
13/10/29 MySQL checks in configure process are hidden if you say no
13/10/29 Fixes some "make ansi" problems.. there are still issues building on a system that would
         force us into ansi.. but some of the unused variables are cleaned up.. networking under
         ansi is very hard..
13/10/29 Rewrote dmalloc checks of the code, this should avoid the ./configure script saying its
         building with dmalloc when its not installed.
13/10/29 ./Config script clean up and bug fix, where some questions it did not use the cache setting
         for a defaulting answer, it would default back to script settings.
13/10/29 Fixed memory leak in P10 ircds.
13/10/28 Fixed lang files to prevent possible segfault.
13/10/23 MySQL int is to small in some cases, need to change to BIGINT, update sql from changes.sql