@@ -14,7 +14,7 @@
 include ../../Makefile.inc.win32
 
 SRCS=bahamut.c charybdis.c inspircd11.c inspircd12.c ircdrizon.c \
-	ircu.c nefarious13.c ratbox.c scarynet.c unreal32.c
+	ircu.c nefarious13.c nefarious2.c ratbox.c scarynet.c unreal32.c
 
 OBJECTS= $(SRCS:.c=.dll)
 CFLAGS=/LD /MD /D MODULE_COMPILE $(CFLAGS) /I"../../include"
